fakevim: fix indenting of continuation lines

Use tab settings for indenting of continuation lines from current
document instead of using default value.

Task-number: QTCREATORBUG-20876
Change-Id: Ied15226166483dc11672c930145564cf897def19
Reviewed-by: David Schulz <david.schulz@qt.io>